gateway-api/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-route
  namespace: gateway-demo
spec:
  parentRefs:
  - name: demo-gateway
  hostnames:
  - demo.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /green
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: green
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /split
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: blue
      port: 80
      weight: 90
    - name: green
      port: 80
      weight: 10
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: blue
      port: 80
